--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ attrs==25.3.0
 blinker==1.9.0
 cachetools==5.5.2
 certifi==2025.1.31
+chardet==5.2.0
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
@@ -25,6 +26,7 @@ pydeck==0.9.1
 python-dateutil==2.9.0.post0
 pytz==2025.2
 referencing==0.36.2
+reportlab==4.4.0
 requests==2.32.3
 rpds-py==0.24.0
 six==1.17.0
